--- a/style.css
+++ b/style.css
@@ -29,11 +29,23 @@ body{
 .highlighted{
     background-color: yellow;
 }
-.footer{
+.footerwrite{
     color: grey;
     font-weight: 800;
 }
+.footerimg{
+    background-image: url(./img/monitor.jpg);
+    background-repeat: no-repeat;
+    width: 200px;
+    height: 100px;
 
+}
+.footerimg2{
+    background-image: url(./img/graph.jpg);
+    background-repeat: no-repeat;
+    width: 200px;
+    height: 100px;
+}
 
 
 
