--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    margin: 0 auto;
+    margin: 0;
 }
 
 .pattern{
@@ -36,15 +36,16 @@ body{
 .footerimg{
     background-image: url(./img/monitor.jpg);
     background-repeat: no-repeat;
-    width: 200px;
-    height: 100px;
+    margin-bottom: 1px;
+    width: 250px;
+    height: 200px;
 
 }
 .footerimg2{
     background-image: url(./img/graph.jpg);
     background-repeat: no-repeat;
-    width: 200px;
-    height: 100px;
+    width: 250px;
+    height: 200px;
 }
 
 
