--- a/style.css
+++ b/style.css
@@ -1,27 +1,34 @@
-body{
+* {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.pattern{
-    width: 100%;
-    height: 70px;
+header{
+    background-color:rgb(91, 129, 255) ;
     background-image: url(./img/pattern.png);
-    background-color:rgb(91, 129, 255);
-    background-size: 20%;
-    background-repeat: repeat;
+    background-size: 30%;
 }
-
+.pattern{
+    width: 95%;
+    margin: auto;
+}
 .logo{
-    margin-top: 10px;
-    width: 10%;
-    height: 100%;
+    margin-top: 40px;
+    height: 60px;
 }
 
 .celeste{
         color: rgb(168, 221, 247);
 }
+.grey{
+    color: rgb(138, 138, 138);
+}
 .tableblue{
     background-color: rgb(32, 169, 229);
+}
+.lightblue{
+    background-color: rgb(169, 230, 244);
 }
 .white{
     color: white;
