--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ header{
     background-image: url(./img/pattern.png);
     background-size: 30%;
 }
-.pattern{
+.container{
     width: 95%;
     margin: auto;
 }
@@ -17,12 +17,17 @@ header{
     margin-top: 40px;
     height: 60px;
 }
+h1{
+    font-size: 50px;
+}
 
 .celeste{
         color: rgb(168, 221, 247);
+        font-weight: 800;
 }
 .grey{
     color: rgb(138, 138, 138);
+    font-weight: 800;
 }
 .tableblue{
     background-color: rgb(32, 169, 229);
