--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@ h1{
 .content {
     margin-bottom: 20px;
 }
+ul {
+    margin-left: 17px;
+}
 .tableblue{
     background-color: rgb(32, 169, 229);
 }
@@ -45,6 +48,7 @@ h1{
 }
 .white{
     color: white;
+    padding: 10px;
 }
 .margintab{
     margin-bottom: 20px;
@@ -55,11 +59,13 @@ h1{
 .footerwrite{
     color: grey;
     font-weight: 800;
+    margin-bottom: 15px;
 }
 .footerimg{
     background-image: url(./img/monitor.jpg);
     background-repeat: no-repeat;
-    margin-bottom: 1px;
+    background-size: cover;
+    margin-bottom: 15px;
     width: 250px;
     height: 200px;
 
@@ -67,6 +73,7 @@ h1{
 .footerimg2{
     background-image: url(./img/graph.jpg);
     background-repeat: no-repeat;
+    background-size: cover;
     width: 250px;
     height: 200px;
 }
